--- a/config_sample.env
+++ b/config_sample.env
@@ -1,47 +1,45 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6243834594:AAEaT4ZsdmoL8TfLzR8L16VjntUScXQ09gc"                              # Require restart after changing it while bot running
+OWNER_ID = "5543917190"                               # Require restart after changing it while bot running
+TELEGRAM_API = "14982593"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "86ce0656fecb2690a633dd60808e74d6"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://movieleechfree:movieleechfree@cluster0.zzuj6ry.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
-STATUS_LIMIT = "4"
+STATUS_LIMIT = "7"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
 INCOMPLETE_TASK_NOTIFIER = "False"
-SET_COMMANDS = "False"
-EXTENSION_FILTER = ""
+SET_COMMANDS = "True"
+EXTENSION_FILTER = ".html .jpg .png .webp .jpeg .jfif .pjpeg .pjp .gif"
 YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
-BOT_PM = ""
+FSUB_IDS = "-1001744824600 -1001822856594"
+BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = ""
-USER_TD_MODE = ""
+GDRIVE_ID = "10bUKYDTpltRqyAr8F1HiPCg93StZnN22"
+USER_TD_MODE = "True"
 USER_TD_SA = ""
-INDEX_URL = ""
-USE_SERVICE_ACCOUNTS = "False"
-IS_TEAM_DRIVE = "False"
-STOP_DUPLICATE = "False"
-DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by WZML-X"
+INDEX_URL = "https://mega-drive-1.megamirrorleech-7b1.workers.dev/0:"
+USE_SERVICE_ACCOUNTS = "True"
+IS_TEAM_DRIVE = "True"
+STOP_DUPLICATE = "True"
+DISABLE_DRIVE_LINK = "True"
+GD_INFO = "Uploaded by @ApnaTube"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
 DEBRID_LINK_API = ""
 FILELION_API = ""
 GDTOT_CRYPT = ""
-UPTOBOX_TOKEN = ""
+UPTOBOX_TOKEN = "0ec36689a04dc6b84dbb1637b5e3f572c9ffo"
 
 # Rclone
 RCLONE_PATH = ""
@@ -62,21 +60,21 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = "code"
-LEECH_FILENAME_PREFIX = ""
-LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = ""
-LEECH_FILENAME_REMNAME = ""
-MIRROR_FILENAME_PREFIX = ""
-MIRROR_FILENAME_SUFFIX = ""
-MIRROR_FILENAME_REMNAME = ""
+LEECH_FILENAME_PREFIX = "@ApnaTube"
+LEECH_FILENAME_SUFFIX = "@ApnaTube"
+LEECH_FILENAME_CAPTION = "@ApnaTube"
+LEECH_FILENAME_REMNAME = "@ApnaTube"
+MIRROR_FILENAME_PREFIX = "@ApnaTube"
+MIRROR_FILENAME_SUFFIX = "@ApnaTube"
+MIRROR_FILENAME_REMNAME = "@ApnaTube"
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
-LINKS_LOG_ID = ""
+LEECH_LOG_ID = "-1001873491547"
+MIRROR_LOG_ID = "-1001796449405"
+LINKS_LOG_ID = "-1001806844111"
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "1800"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
@@ -91,24 +89,24 @@ RSS_DELAY = "600"
 RSS_CHAT = ""
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "sibmzx@telegmail.com"
+MEGA_PASSWORD = "IamRehanHuh"
 
 # Limits
 DAILY_TASK_LIMIT = ""
 DAILY_MIRROR_LIMIT = ""
 DAILY_LEECH_LIMIT = ""
-USER_MAX_TASKS = ""
-BOT_MAX_TASKS = ""
-TORRENT_LIMIT= ""
-DIRECT_LIMIT = ""
-GDRIVE_LIMIT = ""
-CLONE_LIMIT = ""
-YTDLP_LIMIT = ""
-PLAYLIST_LIMIT = ""
-LEECH_LIMIT = ""
-MEGA_LIMIT = ""
-STORAGE_THRESHOLD = ""
+USER_MAX_TASKS = "4"
+BOT_MAX_TASKS = "30"
+TORRENT_LIMIT= "100"
+DIRECT_LIMIT = "100"
+GDRIVE_LIMIT = "100"
+CLONE_LIMIT = "100"
+YTDLP_LIMIT = "100"
+PLAYLIST_LIMIT = "100"
+LEECH_LIMIT = "100"
+MEGA_LIMIT = "100"
+STORAGE_THRESHOLD = "10"
 USER_TIME_INTERVAL = "0"
 
 # Templates
@@ -117,15 +115,15 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+TITLE_NAME = "ApnaTube"
+AUTHOR_NAME = "ApnaTube"
+AUTHOR_URL = "https://t.me/ApnaTube"
 COVER_IMAGE = ""
 
 # Extra
 SAFE_MODE = ""
-DELETE_LINKS = ""
-CLEAN_LOG_MSG = ""
+DELETE_LINKS = "True"
+CLEAN_LOG_MSG = "True"
 SHOW_EXTRA_CMDS = ""
 TIMEZONE = "Asia/Kolkata"
 IMAGES = ""
@@ -141,12 +139,12 @@ SAVE_MSG = "False"
 SOURCE_LINK = "False"
 
 # Token system
-TOKEN_TIMEOUT = ""
-LOGIN_PASS = ""
+TOKEN_TIMEOUT = "3000"
+LOGIN_PASS = "ApnaTube"
 
 # Torrent Search
 SEARCH_API_LINK = ""
-SEARCH_LIMIT = "0"
+SEARCH_LIMIT = "200"
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
