--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6243834594:AAEaT4ZsdmoL8TfLzR8L16VjntUScXQ09gc"                              # Require restart after changing it while bot running
+BOT_TOKEN = "6351581522:AAHBcUyq5rj6ZQeUr4HUgcXBacTIynQf8i4"                              # Require restart after changing it while bot running
 OWNER_ID = "5543917190"                               # Require restart after changing it while bot running
 TELEGRAM_API = "14982593"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "86ce0656fecb2690a633dd60808e74d6"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://movieleechfree:movieleechfree@cluster0.zzuj6ry.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://wzmlmovie:wzmlmovie@apnatube.9zwre6z.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -20,7 +20,7 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "True"
 EXTENSION_FILTER = ".html .jpg .png .webp .jpeg .jfif .pjpeg .pjp .gif"
 YT_DLP_OPTIONS = ""
-FSUB_IDS = "-1001744824600 -1001822856594"
+FSUB_IDS = "-1001822856594"
 BOT_PM = "True"
 
 # GDrive Tools
@@ -75,8 +75,8 @@ LINKS_LOG_ID = "-1001806844111"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "1800"
-BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL = "https://146.190.120.122:80"
+BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 
 #Queueing system
@@ -118,10 +118,10 @@ MDL_TEMPLATE = ""
 TITLE_NAME = "ApnaTube"
 AUTHOR_NAME = "ApnaTube"
 AUTHOR_URL = "https://t.me/ApnaTube"
-COVER_IMAGE = ""
+COVER_IMAGE = "https://telegra.ph/file/fde58e601297254fe77a7.jpg"
 
 # Extra
-SAFE_MODE = ""
+SAFE_MODE = "True"
 DELETE_LINKS = "True"
 CLEAN_LOG_MSG = "True"
 SHOW_EXTRA_CMDS = ""
