--- a/config.env
+++ b/config.env
@@ -62,11 +62,11 @@ MEDIA_GROUP = "False"
 CAP_FONT = "code"
 LEECH_FILENAME_PREFIX = "@ApnaTube"
 LEECH_FILENAME_SUFFIX = "@ApnaTube"
-LEECH_FILENAME_CAPTION = "@ApnaTube"
-LEECH_FILENAME_REMNAME = "@ApnaTube"
+LEECH_FILENAME_CAPTION = ""
+LEECH_FILENAME_REMNAME = ""
 MIRROR_FILENAME_PREFIX = "@ApnaTube"
 MIRROR_FILENAME_SUFFIX = "@ApnaTube"
-MIRROR_FILENAME_REMNAME = "@ApnaTube"
+MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
 LEECH_LOG_ID = "-1001873491547"
@@ -74,8 +74,8 @@ MIRROR_LOG_ID = "-1001796449405"
 LINKS_LOG_ID = "-1001806844111"
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = "1800"
-BASE_URL = "https://146.190.120.122:80"
+TORRENT_TIMEOUT = ""
+BASE_URL = "https://143.198.208.140:80"
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 
@@ -139,8 +139,8 @@ SAVE_MSG = "False"
 SOURCE_LINK = "False"
 
 # Token system
-TOKEN_TIMEOUT = "3000"
-LOGIN_PASS = "ApnaTube"
+TOKEN_TIMEOUT = ""
+LOGIN_PASS = ""
 
 # Torrent Search
 SEARCH_API_LINK = ""
