--- a/config.env
+++ b/config.env
@@ -9,14 +9,14 @@ USER_SESSION_STRING = ""                    # Require restart after changing it 
 DATABASE_URL = "mongodb+srv://wzmlmovie:wzmlmovie@apnatube.9zwre6z.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001635741120"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "7"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "60"
-INCOMPLETE_TASK_NOTIFIER = "False"
+AUTO_DELETE_MESSAGE_DURATION = "120"
+INCOMPLETE_TASK_NOTIFIER = "True"
 SET_COMMANDS = "True"
 EXTENSION_FILTER = ".html .jpg .png .webp .jpeg .jfif .pjpeg .pjp .gif"
 YT_DLP_OPTIONS = ""
@@ -59,7 +59,7 @@ LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-CAP_FONT = "code"
+CAP_FONT = ""
 LEECH_FILENAME_PREFIX = "@ApnaTube"
 LEECH_FILENAME_SUFFIX = "@ApnaTube"
 LEECH_FILENAME_CAPTION = ""
@@ -74,7 +74,7 @@ MIRROR_LOG_ID = "-1001796449405"
 LINKS_LOG_ID = "-1001806844111"
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "1800"
 BASE_URL = "https://143.198.208.140:80"
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
@@ -96,16 +96,16 @@ MEGA_PASSWORD = "IamRehanHuh"
 DAILY_TASK_LIMIT = ""
 DAILY_MIRROR_LIMIT = ""
 DAILY_LEECH_LIMIT = ""
-USER_MAX_TASKS = "4"
+USER_MAX_TASKS = "3"
 BOT_MAX_TASKS = "30"
-TORRENT_LIMIT= "100"
-DIRECT_LIMIT = "100"
-GDRIVE_LIMIT = "100"
-CLONE_LIMIT = "100"
-YTDLP_LIMIT = "100"
-PLAYLIST_LIMIT = "100"
-LEECH_LIMIT = "100"
-MEGA_LIMIT = "100"
+TORRENT_LIMIT= "200"
+DIRECT_LIMIT = "200"
+GDRIVE_LIMIT = ""
+CLONE_LIMIT = "250"
+YTDLP_LIMIT = ""
+PLAYLIST_LIMIT = ""
+LEECH_LIMIT = "200"
+MEGA_LIMIT = "200"
 STORAGE_THRESHOLD = "10"
 USER_TIME_INTERVAL = "0"
 
@@ -133,7 +133,7 @@ BOT_THEME = "minimal"
 EXCEP_CHATS = ""
 
 # M/L Buttons
-SCREENSHOTS_MODE = "False"
+SCREENSHOTS_MODE = "True"
 SHOW_MEDIAINFO = "False"
 SAVE_MSG = "False"
 SOURCE_LINK = "False"
