--- a/config.env
+++ b/config.env
@@ -60,11 +60,11 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = ""
-LEECH_FILENAME_PREFIX = "@ApnaTube"
+LEECH_FILENAME_PREFIX = "[@ApnaTube]"
 LEECH_FILENAME_SUFFIX = "@ApnaTube"
 LEECH_FILENAME_CAPTION = ""
 LEECH_FILENAME_REMNAME = ""
-MIRROR_FILENAME_PREFIX = "@ApnaTube"
+MIRROR_FILENAME_PREFIX = "[@ApnaTube]"
 MIRROR_FILENAME_SUFFIX = "@ApnaTube"
 MIRROR_FILENAME_REMNAME = ""
 
