--- a/config.env
+++ b/config.env
@@ -50,7 +50,7 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/weebzone/WZML-X"
+UPSTREAM_REPO = "https://github.com/anuragmirrorleech/WZML-X"
 UPSTREAM_BRANCH = "master"
 UPGRADE_PACKAGES = ""
 
